# base4

./: CMakeLists.txt  LICENSE  README.md
exec/: CMakeLists.txt
exec/src/: main.cpp
lib/: CMakeLists.txt
lib/include/wtlgo/: base4.hpp
lib/src/: base4.cpp
